Revision of last changes to pt.json

--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -81,7 +81,7 @@
  	 	 	 	"eng": "members"
  	 	 	},
  	 	 	"occupationPoint": {
- 	 	 	 	"trans": "Controle em shangri-la",
+ 	 	 	 	"trans": "Controle em shangri-La",
  	 	 	 	"eng": "Control over Shangri-la"
  	 	 	},
  	 	 	"nextUpkeepDate": {
@@ -597,7 +597,7 @@
  	 	"communityItemLore": {
  	 	 	"noLoreButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Criar Lore",
+ 	 	 	 	 	"trans": "Criar lore",
  	 	 	 	 	"eng": "Create Lore"
  	 	 	 	},
  	 	 	 	"description": {
@@ -1167,7 +1167,7 @@
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Você pode obter núcleos de IA em: \n         - Explorar vários locais \n         - Criar com processadores de hash e sucatas técnicas \n         - Pilhar inimigos em todos os locais",
+ 	 	 	 	 	 	"trans": "Você pode obter núcleos de IA em: \n         - Explorar vários locais \n         - Criar com processadores de hash e sucatas de tecnologia \n         - Pilhar inimigos em todos os locais",
  	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
@@ -1973,7 +1973,7 @@
  	 	 	"empty": {
 				"trans": "Não há itens na caixa de entrada",
 				"eng": "There is no item in your item inbox"
-		   },
+		    },
 		   "getAllItems": {
 				"trans": "Pegar todos os Itens",
  	 	 	 	"eng": "Get All Items"
@@ -2084,7 +2084,7 @@
  	 	 	 	 	 	"eng": "Delete Account"
  	 	 	 	 	},
  	 	 	 	 	"placeholder": {
- 	 	 	 	 	 	"trans": "Digite seu nome de personagem para excluir",
+ 	 	 	 	 	 	"trans": "Insira o nome de seu personagem para excluir",
  	 	 	 	 	 	"eng": "Enter your character name to delete"
  	 	 	 	 	}
  	 	 	 	},
@@ -2714,7 +2714,7 @@
  	 	 	 	"eng": "Voodoo Nemesis"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Aumenta o dano à guangue Inimigos dos Meninos Vodu",
+ 	 	 	 	"trans": "Aumenta o dano à guangue Inimigos dos Meninos Voodoo",
  	 	 	 	"eng": "Increases damage to Enemies of Voodoo Boys gang"
  	 	 	}
  	 	},
@@ -2754,7 +2754,7 @@
  	 	 	 	"eng": "Makeshift"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "A gangue Inimigos dos Meninos Vodu causa dano aumentado em você",
+ 	 	 	 	"trans": "A gangue Inimigos dos Meninos Voodoo causa dano aumentado em você",
  	 	 	 	"eng": "Enemies of Voodoo Boys gang deals increased damage to you"
  	 	 	}
  	 	}
@@ -3009,7 +3009,7 @@
  	},
  	"tutorial": {
  	 	"localCombatButton": {
- 	 	 	"trans": "Clique aqui para scanear por inimigos de rua",
+ 	 	 	"trans": "Clique aqui para escanear por inimigos de rua",
  	 	 	"eng": "Click here to scan for street enemies"
  	 	},
  	 	"localCombatTip": {
@@ -3747,27 +3747,27 @@
  	 	 	 	"eng": "Ammunition tech parts"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Peças técnicas de munição, podem ser comumente encontradas circulando no mercado paralelo. \r\n        Você pode usá-las para fabricar munições se entender como.",
+ 	 	 	 	"trans": "Peças tecnológicas de munição, podem ser comumente encontradas circulando no mercado paralelo. \r\n        Você pode usá-las para fabricar munições se entender como.",
  	 	 	 	"eng": "Ammunition tech parts, These can be commonly found circulating the black market. \r\n        You can use these to craft ammunition if you understand how."
  	 	 	}
  	 	},
  	 	"ammoTech2": {
  	 	 	"name": {
- 	 	 	 	"trans": "Peças tecnológicas de munições militares",
+ 	 	 	 	"trans": "Peças tecnológicas de munição militar",
  	 	 	 	"eng": "Military ammunition tech parts"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Peças técnicas de munição de grau militar, comumente usadas pelo governo, militares e elites, podem ser usadas para fabricar munições utilizáveis, se você souber como",
+ 	 	 	 	"trans": "Peças tecnológicas de munição de grau militar, comumente usadas pelo governo, militares e elites, podem ser usadas para fabricar munições utilizáveis, se você souber como",
  	 	 	 	"eng": "Military grade ammunition tech parts, commonly used by government, military and the elites,can be used to craft into usable Ammo if you have the know-how"
  	 	 	}
  	 	},
  	 	"techScrap": {
  	 	 	"name": {
- 	 	 	 	"trans": "Sucata de tecnologia",
+ 	 	 	 	"trans": "Sucata de Tecnologia",
  	 	 	 	"eng": "Tech Scrap"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Sucata de tecnologia de equipamentos desmontados, isso pode ser submetido a engenharia reversa para ganhar xp de impressão. \r\n       Você pode fazer engenharia reversa no Job Hub.",
+ 	 	 	 	"trans": "Sucata de Tecnologia de equipamentos desmontados, isso pode ser submetido a engenharia reversa para ganhar xp de impressão. \r\n       Você pode fazer engenharia reversa no Job Hub.",
  	 	 	 	"eng": "Technology scrap from disassembled equipment, this can be reverse engineered to gain printing xp. \r\n        You can perform reverse engineering in the Job Hub."
  	 	 	}
  	 	},
@@ -4114,7 +4114,7 @@
  	 	},
  	 	"lootBox1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Cofre trancado",
+ 	 	 	 	"trans": "Cofre Trancado",
  	 	 	 	"eng": "locked container"
  	 	 	},
  	 	 	"description": {
@@ -4124,7 +4124,7 @@
  	 	},
  	 	"lootBox2": {
  	 	 	"name": {
- 	 	 	 	"trans": "Cofre trancado Raro",
+ 	 	 	 	"trans": "Cofre Raro Trancado",
  	 	 	 	"eng": "locked rare container"
  	 	 	},
  	 	 	"description": {
@@ -4134,7 +4134,7 @@
  	 	},
  	 	"lootBox3": {
  	 	 	"name": {
- 	 	 	 	"trans": "Cofre trancado Lendário",
+ 	 	 	 	"trans": "Cofre Lendário Trancado",
  	 	 	 	"eng": "locked legendary container"
  	 	 	},
  	 	 	"description": {
@@ -4427,7 +4427,7 @@
  	 	},
  	 	"halloweenItem": {
  	 	 	"name": {
- 	 	 	 	"trans": "Jack-o'-Lantern",
+ 	 	 	 	"trans": "Abóbora de Halloween",
  	 	 	 	"eng": "Jack-o'-lantern"
  	 	 	},
  	 	 	"description": {
@@ -5152,7 +5152,7 @@
  	"action": {
  	 	"increasePrint": {
  	 	 	"name": {
- 	 	 	 	"trans": "Trabalhe na fábrica de impressão",
+ 	 	 	 	"trans": "Trabalhar na fábrica de impressão",
  	 	 	 	"eng": "work in printing factory"
  	 	 	},
  	 	 	"description": {
@@ -5162,7 +5162,7 @@
  	 	},
  	 	"increaseMedical": {
  	 	 	"name": {
- 	 	 	 	"trans": "Hackeie uma Clínica de Modificação Corporal",
+ 	 	 	 	"trans": "Hackear uma Clínica de Modificação Corporal",
  	 	 	 	"eng": "Hack a Body Mod Clinic"
  	 	 	},
  	 	 	"description": {
@@ -5212,11 +5212,11 @@
  	 	},
  	 	"clanOccupation": {
  	 	 	"name": {
- 	 	 	 	"trans": "Reforçar território em Shangri-la",
+ 	 	 	 	"trans": "Reforçar território em Shangri-La",
  	 	 	 	"eng": "Reinforce occupation at Shangri-la"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Ajude a reforçar e estabelecer controle em Shangri-la",
+ 	 	 	 	"trans": "Ajude a reforçar e estabelecer controle em Shangri-La",
  	 	 	 	"eng": "Help reinforce and establish greater control of Shangri-la city."
  	 	 	}
  	 	},
@@ -5256,13 +5256,13 @@
  	 	 	 	"eng": "Collect Protection Fees"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Subornar funcionários do Governo e do SLPD para cobrar taxas de proteção aos empresários e cidadãos em Shangri-la. Talvez você obtenha alguns itens ÉPICOS deles? (Exclusivo para as duas maiores gangues)",
+ 	 	 	 	"trans": "Subornar funcionários do Governo e do SLPD para cobrar taxas de proteção aos empresários e cidadãos em Shangri-La. Talvez você obtenha alguns itens ÉPICOS deles? (Exclusivo para as duas maiores gangues)",
  	 	 	 	"eng": "Bribe government officials and the SLPD to collect protection fees from business owners and citizens in Shangri-La. Maybe you’ll get some EPIC items from them? (Exclusive to the Top 2 Gangs on the Occupation Leaderboard"
  	 	 	}
  	 	},
  	 	"globalQuest": {
  	 	 	"name": {
- 	 	 	 	"trans": "Hackeie a fortaleza de dados SL",
+ 	 	 	 	"trans": "Hackear a fortaleza de dados SL",
  	 	 	 	"eng": "Hack SL Data Fortress"
  	 	 	},
  	 	 	"description": {
@@ -5450,7 +5450,7 @@
  	 	},
  	 	"christmasGift": {
  	 	 	"name": {
- 	 	 	 	"trans": "Desbloquear contêiner misterioso",
+ 	 	 	 	"trans": "Desbloquear Cofre Misterioso",
  	 	 	 	"eng": "Unlock Mysterious Container"
  	 	 	}
  	 	},
@@ -6383,11 +6383,11 @@
  	 	 	"eng": "Happy Halloween!"
  	 	},
  	 	"desc1": {
- 	 	 	"trans": "É a época assustadora do ano novamente! Shang-ri-la está comemorando o Halloween com um evento especial!",
+ 	 	 	"trans": "É a época assustadora do ano novamente! Shangri-La está comemorando o Halloween com um evento especial!",
  	 	 	"eng": "Its the spooky time of the year again! Shang-ri-la is celebrating Halloween with a special event!"
  	 	},
  	 	"desc2": {
- 	 	 	"trans": "Os inimigos e a IA Core Auto Farm terão chance de soltar Jack-O-Lanterns! Você pode usá-los para criar cofres lendários trancados!",
+ 	 	 	"trans": "Os inimigos e a IA Core Auto Farm terão chance de soltar Abóboras de Halloween! Você pode usá-los para criar Cofres Lendários Trancados!",
  	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop Jack-o-lanterns! you can use these to craft Locked Legendary Containers!"
  	 	},
  	 	"desc3": {
@@ -6405,7 +6405,7 @@
  	 	 	"eng": "Free Unit*"
  	 	},
  	 	"desc2": {
- 	 	 	"trans": "Cofre raro trancado",
+ 	 	 	"trans": "Cofre Raro Trancado",
  	 	 	"eng": "Rare Locked Container"
  	 	},
  	 	"desc3": {
