--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -4431,7 +4431,7 @@
  	 	 	 	"eng": "Jack-o'-lantern"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "被LED燈點亮的雕刻南瓜。 這是萬聖節的裝飾物品。",
+ 	 	 	 	"trans": "被LED燈點亮的雕刻南瓜。 這是萬聖節的裝飾物品。據説集齊一百個就能在背包-製作，合成一個傳奇已加密容器。",
  	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
  	 	 	}
  	 	},
