Revision of last changes

--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -1157,7 +1157,7 @@
  	 	 	 	 	 	"eng": "Use AI Core"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Parece que você tem alguns núcleos de IA, use-os para fazer a AFK Auto Nivelamento na área de nível apropriada.",
+ 	 	 	 	 	 	"trans": "Parece que você tem alguns núcleos de IA, use-os para fazer auto nivelamento AFK em área de nível apropriado.",
  	 	 	 	 	 	"eng": "Looks like you have some AI Cores, use them to do AFK auto leveling in appropriate level area."
  	 	 	 	 	}
  	 	 	 	},
@@ -1167,7 +1167,7 @@
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Você pode obter núcleos de IA em: \n         - Explorar vários locais \n         - Criar com processadores de hash e sucatas de tecnologia \n         - Pilhar inimigos em todos os locais",
+ 	 	 	 	 	 	"trans": "Você pode obter núcleos de IA em: \n         - Explorar vários locais \n         - Criar usando processadores de hash e sucatas de tecnologia \n         - Pilhar inimigos em todos os locais",
  	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
@@ -1639,7 +1639,7 @@
  	 	 	 	"trans": "Talvez você deva comprar algum item de cura primeiro?",
  	 	 	 	"eng": "Maybe buy some healing item first?",
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "Parece que você não tem nenhum analgésico com você, compre-o no Trinoky Mart na cidade antes de entrar nas masmorras, já que você não vai regenerar sua vida após batalhas na masmorra",
+ 	 	 	 	 	"trans": "Parece que você não tem nenhum analgésico com você, compre-o no Mercado Trinoky na cidade antes de entrar nas masmorras, já que você não vai regenerar sua vida após batalhas na masmorra",
  	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
  	 	 	 	},
  	 	 	 	"cancel": {
@@ -1956,7 +1956,7 @@
  	 	},
  	 	"itemInbox": {
  	 	 	"title": {
- 	 	 	 	"trans": "Caixa de entrada de item",
+ 	 	 	 	"trans": "Caixa de entrada de itens",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
  	 	 	"description": {
@@ -1971,7 +1971,7 @@
  	 	 	 	"eng": "Expires in ${date}"
  	 	 	},
  	 	 	"empty": {
- 	 	 	 	"trans": "Não há itens na caixa de entrada",
+ 	 	 	 	"trans": "Não há nenhum item na caixa de entrada de itens",
  	 	 	 	"eng": "There is no item in your item inbox"
  	 	 	},
  	 	 	"getAllItems": {
@@ -2447,7 +2447,7 @@
  	 	 	"eng": "Requires you to be in a gang"
  	 	},
  	 	"requireTopGang": {
- 	 	 	"trans": "Necessita que você esteja em uma gangue de elite",
+ 	 	 	"trans": "Necessita que você esteja em uma gangue que esteja no Top 2 no rank de ocupação",
  	 	 	"eng": "Requires you to be in the Top 2 Gangs on the Occupation Leaderboard"
  	 	}
  	},
@@ -6561,7 +6561,7 @@
  	 	 	"eng": "Discount ends in ${date}"
  	 	},
  	 	"permanentDescription": {
- 	 	 	"trans": "Este título nunca expirará.\\mEle permanece em sua conta para sempre.",
+ 	 	 	"trans": "Este título nunca expirará.\\nEle permanece em sua conta para sempre.",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
  	 	}
  	},
