--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -5874,7 +5874,7 @@
  	 	 	 	"eng": "Block"
  	 	 	},
  	 	 	"report": {
- 	 	 	 	"trans": "Informe y bloqueo",
+ 	 	 	 	"trans": "Reportar y Bloquear",
  	 	 	 	"eng": "Report and Block"
  	 	 	},
  	 	 	"openPlayerProfile": {
@@ -6244,7 +6244,7 @@
  	 	 	}
  	 	},
  	 	"report": {
- 	 	 	"trans": "Informe y bloqueo",
+ 	 	 	"trans": "Reportar y Bloquear",
  	 	 	"eng": "report and block"
  	 	},
  	 	"error": {
