Changes to Turkish Language

--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -24,7 +24,7 @@
  	"ui": {
  	 	"blackMarket": {
  	 	 	"selectItemButton": {
- 	 	 	 	"trans": "Baskı ve sat",
+ 	 	 	 	"trans": "Üret ve Sat",
  	 	 	 	"eng": "Print And Sell"
  	 	 	}
  	 	},
@@ -432,11 +432,11 @@
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "Üretim Aşamanızı arttırarak daha güçlü silahlar üretmek için daha fazla zula üretin",
+ 	 	 	 	"trans": "Üretim Aşamanızı arttırarak daha güçlü silahlar üretmek için daha fazla kalıp kullanın",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
- 	 	 	 	"trans": "Veya auto üretim yapın ve zulalarınızı Kara Korsada satın",
+ 	 	 	 	"trans": "Veya auto üretim yapın ve kalıplarınızı Kara Korsada satın",
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
@@ -684,11 +684,11 @@
  	 	 	 	"eng": "You can't print equipment while ${currentAction}"
  	 	 	},
  	 	 	"printCache": {
- 	 	 	 	"trans": "Zula Üretimi",
+ 	 	 	 	"trans": "Kalıp kullan",
  	 	 	 	"eng": "Print Cache"
  	 	 	},
  	 	 	"printCacheDescription": {
- 	 	 	 	"trans": "Bu zulayı kullanabileceğiniz bir silaya veya kıyafete dönüştür.",
+ 	 	 	 	"trans": "Bu kalıbı kullanabileceğin bir silaya veya kıyafete dönüştür.",
  	 	 	 	"eng": "Turn this cache into a weapon or equipment item that you can use."
  	 	 	},
  	 	 	"openContainer": {
@@ -821,11 +821,11 @@
  	 	 	 	"vars": [
  	 	 	 	 	"skipCount"
  	 	 	 	],
- 	 	 	 	"trans": "${skipCount} atlanıyor",
+ 	 	 	 	"trans": "${skipCount} hızlandırılıyor",
  	 	 	 	"eng": "Skipping ${skipCount}"
  	 	 	},
  	 	 	"skipAvailable": {
- 	 	 	 	"trans": "Atlama Mevcut",
+ 	 	 	 	"trans": "Hızlandırma Mevcut",
  	 	 	 	"eng": "Skip Available"
  	 	 	}
  	 	},
@@ -878,7 +878,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "Dosya ${date} adresinden oluşturuldu",
+ 	 	 	 	"trans": "Dosya ${date} tarihinde oluşturuldu",
  	 	 	 	"eng": "file created at ${date}"
  	 	 	},
  	 	 	"numOfMember": {
@@ -891,7 +891,7 @@
  	 	 	 	 	"eng": "Gang Actions"
  	 	 	 	},
  	 	 	 	"kick": {
- 	 	 	 	 	"trans": "Kov",
+ 	 	 	 	 	"trans": "Çıkar",
  	 	 	 	 	"eng": "Kick"
  	 	 	 	},
  	 	 	 	"editPermissions": {
@@ -921,11 +921,11 @@
  	 	 	 	 	"eng": "Invite to Gang"
  	 	 	 	},
  	 	 	 	"addToFriend": {
- 	 	 	 	 	"trans": "Arkadaş Listesi'ne ekle",
+ 	 	 	 	 	"trans": "Arkadaş Listesine ekle",
  	 	 	 	 	"eng": "add to Friend List"
  	 	 	 	},
  	 	 	 	"removeFromFriend": {
- 	 	 	 	 	"trans": "Arkadaş Listesi'nden çıkar",
+ 	 	 	 	 	"trans": "Arkadaş Listesinden çıkar",
  	 	 	 	 	"eng": "Remove from Friend List"
  	 	 	 	},
  	 	 	 	"giveStreetCred": {
@@ -938,7 +938,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"equipped": {
- 	 	 	 	"trans": "Donatılmış",
+ 	 	 	 	"trans": "Kullanımda",
  	 	 	 	"eng": "Equipped"
  	 	 	},
  	 	 	"inventory": {
@@ -959,7 +959,7 @@
  	 	 	 	 	"eng": "Error"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "Yıkıcı başarısızlık gerçekleşti",
+ 	 	 	 	 	"trans": "Başarısız, eşya parçalandır",
  	 	 	 	 	"eng": "Destructive failure accrued"
  	 	 	 	}
  	 	 	},
@@ -979,7 +979,7 @@
  	 	 	 	 	"eng": "Are you sure you want to leave this dungeon?"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "Bu zindana tekrar giremeyeceksiniz",
+ 	 	 	 	 	"trans": "Aynı zindana tekrar giremeyeceksiniz",
  	 	 	 	 	"eng": "You will not be able to enter this dungeon instance again"
  	 	 	 	}
  	 	 	}
@@ -1030,20 +1030,20 @@
  	 	 	 	}
  	 	 	},
  	 	 	"noItems": {
- 	 	 	 	"trans": "Bu kategoriye göre şu anda ürün bulunmamaktadır",
+ 	 	 	 	"trans": "Şu anda satışta bu kategoriye göre ürün bulunmamaktadır",
  	 	 	 	"eng": "there is currently no items on sale for this category"
  	 	 	},
  	 	 	"buy": {
- 	 	 	 	"trans": "Satın alma",
+ 	 	 	 	"trans": "Satın al",
  	 	 	 	"eng": "Purchase"
  	 	 	},
  	 	 	"remove": {
- 	 	 	 	"trans": "Kaldırmak",
+ 	 	 	 	"trans": "Kaldır",
  	 	 	 	"eng": "Remove"
  	 	 	},
  	 	 	"stall": {
  	 	 	 	"sellItemButton": {
- 	 	 	 	 	"trans": "Stoğuna ürün ekle",
+ 	 	 	 	 	"trans": "Eşya Satışa Çıkar",
  	 	 	 	 	"eng": "Put Item On Sale"
  	 	 	 	},
  	 	 	 	"selectItemForSale": {
@@ -1062,7 +1062,7 @@
  	 	 	 	"eng": "Syncing"
  	 	 	},
  	 	 	"incompleteError": {
- 	 	 	 	"trans": "Lütfen cihaz zamanınızın doğru olduğundan emin olun.",
+ 	 	 	 	"trans": "Lütfen cihaz zamanının doğru olduğundan emin olun.",
  	 	 	 	"eng": "Please ensure your device time is correct."
  	 	 	},
  	 	 	"manualRefresh": {
@@ -1075,13 +1075,13 @@
  	 	 	},
  	 	 	"marketShortcut": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Market",
+ 	 	 	 	 	"trans": "Amadon",
  	 	 	 	 	"eng": "Amadon"
  	 	 	 	}
  	 	 	},
  	 	 	"stallShortcut": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Tutum",
+ 	 	 	 	 	"trans": "Tezgahım",
  	 	 	 	 	"eng": "My Stall"
  	 	 	 	}
  	 	 	},
@@ -1107,7 +1107,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"points"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${points} Meslek Kontrolü",
+ 	 	 	 	 	"trans": "${points} İşgal Kontrolü",
  	 	 	 	 	"eng": "${points} Occupation Control"
  	 	 	 	}
  	 	 	}
@@ -1115,16 +1115,16 @@
  	 	"quest": {
  	 	 	"dynamicTutorial": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Öğreticiler",
+ 	 	 	 	 	"trans": "Rehberler",
  	 	 	 	 	"eng": "Tutorials"
  	 	 	 	},
  	 	 	 	"printingTooLow": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Baskı rütbesini geliştirmek",
+ 	 	 	 	 	 	"trans": "Üretim rütbesini geliştirmek",
  	 	 	 	 	 	"eng": "Improve Printing Rank"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Baskı sırası, yazdırdığınız öğenin seviyesini belirler. Black Pazarda Baskı ve Satmak Baskı Exp Kazanın",
+ 	 	 	 	 	 	"trans": "Üretim rütbesi, ürettiğiniz eşyanın seviyesini belirler. Üretim yapıp Kara Markette satarak Tecrübe kazanın",
  	 	 	 	 	 	"eng": "Printing Rank determines the level of item you print. Gain printing exp by print & sell in Black Market"
  	 	 	 	 	}
  	 	 	 	},
@@ -1134,7 +1134,7 @@
  	 	 	 	 	 	"eng": "Get even better equipments!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Mevcut ekipmanınız seviyin için modası geçmiş görünüyor, onları değiştirmek için daha güçlü olanları deneyin",
+ 	 	 	 	 	 	"trans": "Mevcut ekipmanın seviyen için biraz eskimiş görünüyor, değiştirmek için daha güçlü olanları üretmeyi deneyin",
  	 	 	 	 	 	"eng": "Your current equipment seems abit outdated for your level, try printing stronger ones to replace them"
  	 	 	 	 	}
  	 	 	 	},
@@ -1153,21 +1153,21 @@
  	 	 	 	},
  	 	 	 	"aiCore": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "AI çekirdekli kullanın",
+ 	 	 	 	 	 	"trans": "AI çekirdeği kullanın",
  	 	 	 	 	 	"eng": "Use AI Core"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Bazı AI çekirdekleriniz var gibi görünüyor, onları uygun seviye alanda AFK otomatik tesviye yapmak için kullanın.",
+ 	 	 	 	 	 	"trans": "Görünüşe göre birkaç AI çekirdeğin var, onları uygun seviyeli bölgede AFK oto seviye arttırımı için kullanın.",
  	 	 	 	 	 	"eng": "Looks like you have some AI Cores, use them to do AFK auto leveling in appropriate level area."
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"noAiCore": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "AI çekirdeklerini satın almak",
+ 	 	 	 	 	 	"trans": "AI Çekirdeği Elde Et",
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "AI çekirdeklerini alabilirsiniz: \n         - Çeşitli yerlerde çöpçü \n         - Hash işlemcileri ve teknoloji hurdaları ile işlenmesi \n         - Tüm yerlerde düşmanlardan yağma",
+ 	 	 	 	 	 	"trans": "AI çekirdeği elde etmek için: \r\n         -Çeşitli yerlerden Eşya toplayın\r\n         - Veri işlemcisi ve Tek Hurdası ile üretin \n         - Defettiğiniz düşmanlardan toplayın",
  	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
@@ -1185,11 +1185,11 @@
  	 	 	 	},
  	 	 	 	"infoBox": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Siber Uzay İşgali Devam Ediyor",
+ 	 	 	 	 	 	"trans": "Siberuzay İhlali Devam Ediyor",
  	 	 	 	 	 	"eng": "Cyberspace breach in progress"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
- 	 	 	 	 	 	"trans": "Tüm oyunculara bonus bir takviye sağlamak için SL-Veri Kalesi'nin ele geçirilmesine katılın",
+ 	 	 	 	 	 	"trans": "Tüm oyunculara takviye sağlamak için SL-Veri Kalesi'nin ele geçirilmesine katılın",
  	 	 	 	 	 	"eng": "Join forces with other Netrunners to breach the SL-Data Fortress to grant all players with buff"
  	 	 	 	 	}
  	 	 	 	},
@@ -1199,7 +1199,7 @@
  	 	 	 	 	 	"eng": "Breach operation completed"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
- 	 	 	 	 	 	"trans": "Uzaktan istismar uygulanıyor, lütfen bekleyin ...",
+ 	 	 	 	 	 	"trans": "Uzaktan sızıntı sağlanıyor, lütfen bekleyin ...",
  	 	 	 	 	 	"eng": "Remote exploit deploying, please wait..."
  	 	 	 	 	}
  	 	 	 	}
@@ -1211,7 +1211,7 @@
  	 	 	 	"eng": "rewards"
  	 	 	},
  	 	 	"rewardAvailable": {
- 	 	 	 	"trans": "Ödül toplamak için tıklayın",
+ 	 	 	 	"trans": "Ödülleri toplamak için tıklayın",
  	 	 	 	"eng": "Click to collect reward"
  	 	 	},
  	 	 	"viewDetails": {
@@ -1279,7 +1279,7 @@
  	 	},
  	 	"tutorial": {
  	 	 	"title": {
- 	 	 	 	"trans": "Öğretici",
+ 	 	 	 	"trans": "Rehber",
  	 	 	 	"eng": "Tutorial"
  	 	 	}
  	 	},
