--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -38,7 +38,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} Биткоинов будет внесено на счёт твоей банды. Уверен?",
+ 	 	 	 	 	"trans": "${amount} Биткоинов будет внесено на счёт твоей банды, это действие нельзя будет отменить. Ты Уверен?",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -332,19 +332,19 @@
  	 	 	 	"eng": "You need to be at least level ${minLevel} to send chat messages"
  	 	 	},
  	 	 	"chat": {
- 	 	 	 	"trans": "чат",
+ 	 	 	 	"trans": "Чат",
  	 	 	 	"eng": "chat"
  	 	 	},
  	 	 	"gang": {
- 	 	 	 	"trans": "банда",
+ 	 	 	 	"trans": "Банда",
  	 	 	 	"eng": "gang"
  	 	 	},
  	 	 	"mail": {
- 	 	 	 	"trans": "сообщения",
+ 	 	 	 	"trans": "Почта",
  	 	 	 	"eng": "mail"
  	 	 	},
  	 	 	"noti": {
- 	 	 	 	"trans": "увед.",
+ 	 	 	 	"trans": "Увед.",
  	 	 	 	"eng": "noti."
  	 	 	}
  	 	},
@@ -507,7 +507,7 @@
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Глобальный пропуск позволяет уменьшить время ожидания AFK и мгновенно завершить его.\r\n     этот эффект будет применен ко всем игрокам, выполняющим задачу AFK",
+ 	 	 	 	 	"trans": "Глобальный пропуск позволяет уменьшить время ожидания AFK и мгновенно завершить его.\r\n     этот эффект будет применен ко всем игрокам, выполняющим AFK задачу",
  	 	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all player performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -534,7 +534,7 @@
  	 	 	 	 	"eng": "Confirm use skip?"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "Глобальный пропуск уменьшит время ожидания всех игроков, выполняющих задачу AFK",
+ 	 	 	 	 	"trans": "Глобальный пропуск уменьшит время ожидания всех игроков, выполняющих AFK задачу",
  	 	 	 	 	"eng": "Global Skip will skip the waiting time for all players performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -552,7 +552,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Глобальный пропуск позволяет уменьшить время ожидания AFK и мгновенно завершить его.\r\n     этот эффект будет применен ко всем игрокам, выполняющим задачу AFK",
+ 	 	 	 	"trans": "Глобальный пропуск позволяет уменьшить время ожидания AFK и мгновенно завершить его.\r\n     этот эффект будет применен ко всем игрокам, выполняющим AFK задачу",
  	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all players performing an AFK task"
  	 	 	}
  	 	},
@@ -611,7 +611,7 @@
  	 	 	 	 	"eng": "Community Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Открыть описание предмета",
+ 	 	 	 	 	"trans": "Открыть описание от сообщества этого предмета",
  	 	 	 	 	"eng": "Open the community lore for this item"
  	 	 	 	}
  	 	 	},
@@ -1480,7 +1480,7 @@
  	 	},
  	 	"machineCraft": {
  	 	 	"itemLocked": {
- 	 	 	 	"trans": "Этот элемент заблокирован",
+ 	 	 	 	"trans": "Этот предмет заблокирован",
  	 	 	 	"eng": "This item is locked"
  	 	 	}
  	 	},
@@ -1499,7 +1499,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"percent"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Ты уверен, что хочешь откалибровать этот элемент с ${percent}% шансом фатальной ошибки?",
+ 	 	 	 	 	"trans": "Ты уверен, что хочешь откалибровать этот предмет с ${percent}% шансом фатальной ошибки?",
  	 	 	 	 	"eng": "Are you sure you want to calibrate this item with ${percent}% destructive failure chance?"
  	 	 	 	}
  	 	 	}
@@ -1895,7 +1895,7 @@
  	 	 	 	 	"eng": "You need to insert Calibration Core to upgrade your equipment."
  	 	 	 	},
  	 	 	 	"noCore": {
- 	 	 	 	 	"trans": "У вас нет калибровочного ядра",
+ 	 	 	 	 	"trans": "У тебя нет калибровочного ядра",
  	 	 	 	 	"eng": "You don\\'t have any Calibration Core"
  	 	 	 	}
  	 	 	},
@@ -2220,11 +2220,11 @@
  	 	 	 	 	"trans": "Контейнер",
  	 	 	 	 	"eng": "Container"
  	 	 	 	},
- 	 	 	 	"trans": "Выберите контейнер",
+ 	 	 	 	"trans": "Выбери контейнер",
  	 	 	 	"eng": "Select Container"
  	 	 	},
  	 	 	"hint": {
- 	 	 	 	"trans": "Разблокируй контейнер, чтобы получить элементы внутри, требуется небольшое количество технических отходов",
+ 	 	 	 	"trans": "Разблокируй контейнер, чтобы получить предметы внутри, требуется небольшое количество технических отходов",
  	 	 	 	"eng": "Unlock a container to get the items inside, requires small amount of tech scraps"
  	 	 	},
  	 	 	"increaseEpicDropRate": {
@@ -2401,7 +2401,7 @@
  	 	 	 	"eng": "Name must be at least 4 characters long"
  	 	 	},
  	 	 	"tooLong": {
- 	 	 	 	"trans": "Имя должно быть не длиннее 16 символов",
+ 	 	 	 	"trans": "Имя должно быть не длиннее или равняться 16 символам",
  	 	 	 	"eng": "Name must be less or equal to 16 characters long"
  	 	 	}
  	 	},
@@ -3448,7 +3448,7 @@
  	 	 	 	 	"eng": "Blue Neon chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "Неоново синие обрамление профиля (с анимацией)",
+ 	 	 	 	 	"trans": "Неоново синее оформление профиля (с анимацией)",
  	 	 	 	 	"eng": "Blue Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -3488,7 +3488,7 @@
  	 	 	 	 	"eng": "Purple Neon chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "Неоново фиолетовое обрамление профиля (с анимацией)",
+ 	 	 	 	 	"trans": "Неоново фиолетовое оформление профиля (с анимацией)",
  	 	 	 	 	"eng": "Purple Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -3528,7 +3528,7 @@
  	 	 	 	 	"eng": "Orange Neon chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "Неоново оранжевое обрамление профиля (с анимацией)",
+ 	 	 	 	 	"trans": "Неоново оранжевое оформление профиля (с анимацией)",
  	 	 	 	 	"eng": "Orange Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -3568,7 +3568,7 @@
  	 	 	 	 	"eng": "Pink Neon chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "Неоново розовое обрамление профиля (с анимацией)",
+ 	 	 	 	 	"trans": "Неоново розовое оформление профиля (с анимацией)",
  	 	 	 	 	"eng": "Pink Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -3608,7 +3608,7 @@
  	 	 	 	 	"eng": "Halloween chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "Хэллоуинское обрамление профиля (с анимацией)",
+ 	 	 	 	 	"trans": "Хэллоуинское оформление профиля (с анимацией)",
  	 	 	 	 	"eng": "Halloween Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -3707,7 +3707,7 @@
  	 	 	 	"eng": "AI Core"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Свободно продаваемый Блок Нейронной Обработки (NPU). Поставляется с ИИ общего назначения. \r\n        Используй для запуска автоматического фарма в подземелье.",
+ 	 	 	 	"trans": "Свободно продаваемый Блок Нейронной Обработки (БНО). Поставляется с ИИ общего назначения. \r\n        Используй для запуска автоматического фарма в подземелье.",
  	 	 	 	"eng": "Commercially used Neural Processing Unit (NPU). Comes with general purpose AI. \r\n        You can use this to deploy a farming bot to dungeon for you."
  	 	 	}
  	 	},
@@ -3747,7 +3747,7 @@
  	 	 	 	"eng": "Ammunition tech parts"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Детали боеприпасов, часто встречающиеся на черном рынке. \r\n        Можно использовать для создания боеприпасов, если знать как.",
+ 	 	 	 	"trans": "Детали боеприпасов, часто встречающиеся на черном рынке. \r\n        Можно использовать для создания боеприпасов, если ты знаеш как.",
  	 	 	 	"eng": "Ammunition tech parts, These can be commonly found circulating the black market. \r\n        You can use these to craft ammunition if you understand how."
  	 	 	}
  	 	},
@@ -3825,7 +3825,7 @@
  	 	 	 	"eng": "Pain Away"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "У тебя мигрень? Используй Обезболивающее фирмы Pain Away™, чтобы избавиться от боли!",
+ 	 	 	 	"trans": "У тебя головная боль? Используй Обезболивающее фирмы Pain Away™, чтобы избавиться от боли!",
  	 	 	 	"eng": "Do you have headache? Use Pain Away™ to relieve your pain!"
  	 	 	}
  	 	},
@@ -3855,7 +3855,7 @@
  	 	 	 	"eng": "Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Используй, чтобы вылечить любую (*за некоторым исключением)  травму!",
+ 	 	 	 	"trans": "Используй, чтобы вылечить любую (*за некоторым исключением) травму!",
  	 	 	 	"eng": "Inject it to cure any(*conditions apply) injury!"
  	 	 	}
  	 	},
@@ -3935,7 +3935,7 @@
  	 	 	 	"eng": "Pain Away Spray"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "У вас с другом мигрень? Используйте обезболивающий спрей фирмы Pain Away™, чтобы избавиться от боли!",
+ 	 	 	 	"trans": "У вас с другом головная боль? Используйте обезболивающий спрей фирмы Pain Away™, чтобы избавиться от боли!",
  	 	 	 	"eng": "Do you and your friends both have headaches? Use Pain Away Spray™ to relief your pain!"
  	 	 	}
  	 	},
@@ -4065,7 +4065,7 @@
  	 	 	 	"eng": "Hash Processor"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Может быть использован как аппаратное обеспечение для криптодобычи, \r\n        но из-за слишком сильного разгона процессор легко перегорает;\r\n        Ты можешь использовать его для криптодобычи в [ЦЕНТРЕ ЗАНЯТОСТИ]",
+ 	 	 	 	"trans": "Может быть использован как аппаратное обеспечение для криптодобычи, \r\n        но из-за слишком сильного разгона процессор легко перегорает;\r\n        Ты можешь использовать его для криптодобычи в Центре Занятости.",
  	 	 	 	"eng": "Can be used as a dedicated hardware for BitCoin mining, \r\n        however due to overclocking, the processor is easily burntout,\r\n        You may use this to mine BitCoin at [JOB HUB]"
  	 	 	}
  	 	},
@@ -4138,7 +4138,7 @@
  	 	 	 	"eng": "locked legendary container"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Укрепленный контейнер с биометрическим шифром, содержащий полезные предметы.\r\n        К счастью, прошивка платы микрокомпьютера устарела и его можно взломать, найди [Терминал], чтобы открыть этот контейнер",
+ 	 	 	 	"trans": "Укрепленный контейнер с биометрическим шифром, содержащий полезные предметы.\r\n        К счастью, прошивка платы микрокомпьютера устарела и его можно взломать, найди Терминал, чтобы открыть этот контейнер",
  	 	 	 	"eng": "A reinforced container with biometric encryption lock, it seems to contain important items inside.\r\n        Luckily the on board micro computer is running on out-dated firmware, where an exploit is possible, go to [Terminal] to unlock this container"
  	 	 	}
  	 	},
@@ -4148,7 +4148,7 @@
  	 	 	 	"eng": "Gang Invasion Order Transmitter"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Простой передатчик, способный связаться с зашифрованным каналом вашей банды и выдать приказ о вторжении.\r\n         Этот предмет необходим для активации подземелья Банды",
+ 	 	 	 	"trans": "Простой передатчик, способный связаться с зашифрованным каналом вашей банды и выдать приказ о вторжении.\r\n         Этот предмет необходим для активации подземелий Банды",
  	 	 	 	"eng": "A simple transmitter device that can be bind to your gang encrypted channel and give out invasion order.\r\n        This item is required to activate Gang Dungeons"
  	 	 	}
  	 	},
@@ -5030,7 +5030,7 @@
  	 	 	 	"eng": "Play MEGA Pachinko Game"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Привет!! ^___^\r\n        Cыграйте в MEGA Pachinko! Есть шанс выиграть ОГРОМНЫЕ ЭПИЧЕСКИЕ награды\r\n        всего 5000 BTC за сеанс, ОГРАНИЧЕННОЕ ПРЕДЛОЖЕНИЕ!!! <3<3<3\r\n        ##Особая благодарность Militech за спонсирование данного события##",
+ 	 	 	 	"trans": "Konichiwa!! ^___^\r\n        Cыграйте в MEGA Pachinko! Есть шанс выиграть ОГРОМНЫЕ ЭПИЧЕСКИЕ награды\r\n        всего 5000 BTC за сеанс, ОГРАНИЧЕННОЕ ПРЕДЛОЖЕНИЕ!!! <3<3<3\r\n        ##Особая благодарность Militech за спонсирование данного события##",
  	 	 	 	"eng": "Konnichiwa!! ^___^\r\n        Come play the MEGA Pachinko! With chance to win HUGE EPIC rewards\r\n        only 5000 btc per session, LIMITED TIME OFFER!!! <3<3<3\r\n        ##Special thanks for Militech for sponsoring this event##"
  	 	 	}
  	 	},
