--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -120,7 +120,7 @@
  	 	 	 	"eng": "Community Content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Этот контент создан сообществом. Нажми здесь, чтобы внести свой собственный контент.",
+ 	 	 	 	"trans": "Этот контент создан сообществом. Нажми здесь, чтобы предложить свой собственный контент.",
  	 	 	 	"eng": "This content is contributed by the community. click here to contribute your own content."
  	 	 	}
  	 	},
@@ -137,7 +137,7 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Ты нашёл заблокированный сейф с цветной клавиатурой, ты должен разблокировать его, введя правильную последовательность цветов.",
+ 	 	 	 	 	"trans": "Ты нашёл заблокированный сейф с цветной клавиатурой, у тебя получится разблокировать его, введя правильную последовательность цветов.",
  	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
  	 	 	 	},
  	 	 	 	"progress": {
@@ -372,14 +372,14 @@
  	 	"clanPage": {
  	 	 	"createClan": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Ты не являетешся членом какой-либо банды",
+ 	 	 	 	 	"trans": "Ты не являешься членом какой-либо банды",
  	 	 	 	 	"eng": "You are not a member of any gang"
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Чат банды будет включен, когда ты вступишь в банду. \\n Вступи в банду, заводя друзей в глобальном чате или создадайте свою собственную банду и пригласи туда своих друзей!",
+ 	 	 	 	 	"trans": "Чат банды будет доступен, когда ты вступишь в банду. \\n Вступи в банду, заводя друзей в глобальном чате или создадай свою собственную банду и пригласи туда своих друзей!",
  	 	 	 	 	"eng": "gang chat will be enabled when you belong to a gang.\\njoin a gang by making friends in global chat or create your own gang and invite your friends!"
  	 	 	 	},
  	 	 	 	"createButton": {
@@ -398,7 +398,7 @@
  	 	},
  	 	"deathScreen": {
  	 	 	"topTitleLeft": {
- 	 	 	 	"trans": "смертельная рана",
+ 	 	 	 	"trans": "смертельное ранение",
  	 	 	 	"eng": "fatal injury"
  	 	 	},
  	 	 	"topTitleRight": {
@@ -871,14 +871,14 @@
  	 	 	 	"eng": "confidential"
  	 	 	},
  	 	 	"decoration2": {
- 	 	 	 	"trans": "Свойство SLPD",
+ 	 	 	 	"trans": "Собственность SLPD",
  	 	 	 	"eng": "Property of SLPD"
  	 	 	},
  	 	 	"accountCreated": {
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "Файл, созданный ${date}",
+ 	 	 	 	"trans": "Файл, создан ${date}",
  	 	 	 	"eng": "file created at ${date}"
  	 	 	},
  	 	 	"numOfMember": {
